# GallyScraper-Haskell

./: .gitignore  LICENSE.txt  README.md  gallyscraper.cabal
src/: Scraper.hs
