Name:                gallyscraper
Version:             0.1
Cabal-version:       >=1.16.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Tool
Synopsis:            A tool for scraping a NetLogo/Galapagos server for compilation data
Description:         A tool for scraping a NetLogo/Galapagos server for compilation data
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/GallyScraper-Haskell.git

executable scraper
  main-is:        Scraper.hs
  hs-source-dirs: src
  default-extensions:
    NoImplicitPrelude
  default-language: Haskell2010
  build-depends:
    base       >= 4.6 && < 5,
    aeson      >= 0.6,
    bytestring >= 0.10,
    containers >= 0.5,
    HTTP       >= 4000.2
  GHC-Options:
    -Wall
    -fno-warn-name-shadowing
